# kmz2geojson

./: .gitignore  flake.nix  pyproject.toml
kmz2geojson/: main.py
