[project]
name = "kmz2geojson"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
        'click>=6.6',
        'kml2geojson>=4.0.2',
        'pathlib',
        'lxml'
]

[project.scripts]
kmz2g = "kmz2geojson.cli:kmz2g"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"